fix z-index

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -39,7 +39,7 @@
       left: 0;
       right: 0;
       width: 100vw;
-      z-index: 1;
+      z-index: 2;
       background: $orange;
       max-height: 0;
       overflow: hidden;
